--- a/404.html
+++ b/404.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="./404.css" />
+		<link rel="stylesheet" href="./global.css" />
+	</head>
+	<body>
+		<main>
+			<div class="left">
+				<div class="error404">
+					<img src="./img/404.png" alt="" />
+					<div class="point1"><img src="./img/Ellipse 104.png" /></div>
+					<div class="point2"><img src="./img/Ellipse 105.png" /></div>
+				</div>
+				<div class="text">
+					<div class="oppps">
+						<p>Oppps, coś poszło nie tak.</p>
+					</div>
+					<div class="backToMain">
+						<a href="./index.html">Wróć do strony głownej</a>
+					</div>
+				</div>
+			</div>
+			<div class="right">
+				<div class="bgi"></div>
+				<div class="txt"></div>
+			</div>
+		</main>
+	</body>
 </html>
