--- a/build.html
+++ b/build.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="./build.css" />
+		<link rel="stylesheet" href="./global.css">
+	</head>
+	<body>
+		<main>
+			<div class="left">
+				<div class="papershop">
+					<img src="./img/Group 5278.png" alt="" />
+				</div>
+				<div class="buildWeb">
+					<img src="./img/stronaWbudowie.png" alt="" />
+				</div>
+				<div class="text">
+					<p>
+						Jesteś w trakcie tworzenia sklepu online. Potrzebujemy jeszcze
+						trochę czasu. Stay tuned!
+					</p>
+				</div>
+			</div>
+			<div class="right">
+				<div class="bgi"></div>
+				<div class="txt"></div>
+			</div>
+		</main>
+	</body>
 </html>
