--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="stylesheet" href="./global.css" />
-		<link rel="stylesheet" href="./confirm.css" />
+		<link rel="stylesheet" href="./profile.css" />
 		<link rel="icon" type="image/png" href="./img/favicon.ico" sizes="32x32" />
 	</head>
 	<body>
