--- a/password-recovery.html
+++ b/password-recovery.html
@@ -9,35 +9,35 @@
 		<link rel="icon" type="image/png" href="./img/favicon.ico" sizes="32x32" />
 	</head>
 	<body>
-		<main>
-			<div class="felt">
-				<div class="recovery">
-					<p class="title">Zapomniałeś hasła?</p>
-					<p class="subtitle">
-						Podaj swój e-mail,jeśli mamy go w systemie, wyślemy Ci link do
-						zmiany hasła
-					</p>
-					<form id="form">
-						<div class="textInput">
-							<label for="" class="label">e-mail</label>
-							<input type="text" id="email" placeholder="e-mail" />
-							<div class="validationError" id="emailError">
-								To nie jest poprawny format adresu e-mail
-							</div>
-						</div>
-					</form>
-					<div class="toLogin">
-						Wróć do <a href="login.html">ekranu logowania</a>
-					</div>
-				</div>
-			</div>
-			<div class="right">
-				<div class="bgi"></div>
-				<div class="txt">
-					<img src="./img/image 69.png" alt="" />
-				</div>
-			</div>
-		</main>
-		<script src="recovery.js"></script>
-	</body>
+    <main>
+      <div class="left">
+        <div class="recovery">
+          <div class="notification success" id="success"> Sprawdź swoją skrzynkę :) </div>
+          <div class="notification format" id="format"> E-mail ma zły format :( </div>
+          <p class="title">Zapomniałeś hasła?</p>
+          <p class="subtitle">Podaj swój e-mail, jeśli mamy go w systemie, wyślemy Ci link do zmiany hasła.</p>
+          <form id="form">
+            <div class="textInput">
+              <label class="label" for="">e-mail</label>
+              <input id="email" type="text" placeholder="e-mail" />
+              <div id="emailError" class="validationError">
+                To nie jest poprawny format adresu e-mail
+              </div>
+            </div>
+          </form>
+          <div class="toLogin">Wróć do <a href="login.html">ekranu logowania</a></div>
+        </div>
+      </div>
+      <div class="right">
+        <div class="bgi"></div>
+        <div class="txt">
+          <img src="./img/image 69.png"/>
+        </div>
+      </div>
+    </main>
+    <div id="popup" class="popup">
+      <span class="loader"></span>
+    </div>
+    <script src="recovery.js"></script>
+  </body>
 </html>
