--- a/profile.html
+++ b/profile.html
@@ -9,28 +9,33 @@
 		<link rel="icon" type="image/png" href="./img/favicon.ico" sizes="32x32" />
 	</head>
 	<body>
-		<main>
-			<div class="left">
-				<div class="profile">
-					<p class="title">Witaj użytkowniku!</p>
-					<div id="userContent">
-						<div class="lineWrapper">
-							<p>Zobacz innych</p>
-						</div>
-            <ul id="innerContent"></ul>
-            <div class="register">
-              Dzięki za wizytę <span class="logout">Wyloguj się</span>
+    <main>
+      <div class="left">
+        <div class="login">
+          <p class="title">Witaj użytkowniku!</p>
+          <div id="userContent">
+            <div class="lineWrapper">
+              <div class="line"></div>
+              <p>Zobacz innych</p>
             </div>
-					</div>
-				</div>
-			</div>
-			<div class="right">
-				<div class="bgi"></div>
-				<div class="txt">
-					<img src="./img/image 69.png" alt="" />
-				</div>
-			</div>
-		</main>
-		<script src="profile.js"></script>
-	</body>
+            <ul id="innerContent">
+            </ul>
+            <div class="register">
+              Dzięki za wizytę! <span class="logout">Wyloguj się</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="right">
+        <div class="bgi"></div>
+        <div class="txt">
+          <img src="./img/image 69.png"/>
+        </div>
+      </div>
+    </main>
+    <div id="popup" class="popup">
+      <span class="loader"></span>
+    </div>
+    <script src="profile.js"></script>
+  </body>
 </html>
